broken width fix on IE

--- a/_source/scss/partials/_cuts.scss
+++ b/_source/scss/partials/_cuts.scss
@@ -39,6 +39,7 @@
   > div {
 
     margin: 4.0rem 0 0 0;
+    width: 100%;
 
     @include MAX(M) {
       display: block !important;
